test/classes/jplevyak/inherit-2.good
Error: Illegal cast to generic type (inherit-2.chpl:12)
